[package]
name = "BacteriaGraphing"
version = "0.1.0"
authors = ["Pavel Krauz <pavel.krauz1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.39", features = ["HtmlCanvasElement", "console"] }

plotters = "0.3.5"
plotters-canvas = "0.3.0"

#added
js-sys = "0.3"
lazy_static = "1.4" 


[profile.release]
lto = true

